fix accordions on mobile

--- a/src/sass/accordion.sass
+++ b/src/sass/accordion.sass
@@ -15,6 +15,9 @@
     & .item-head
       font-weight: normal
       margin: 1rem 0
+      margin-right: 50px
+      display: flex
+      align-items: center
       & p
         display: inline
         color: $greyDarker
